# libfasta

./: .clang-format  .devcontainer.json  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improve-existing-docs.md
.github/workflows/: checks.yml  codeql.yml  security.yml  stale.yml
ci/: full.sh
data/: test.fasta
example/: CMakeLists.txt  fasta.fasta  main.cpp  read_gzip.cpp
examples/: CMakeLists.txt  main.cpp  read.cpp  read_gzip.cpp
include/bio/: fasta.hpp
include/fasta/: fasta.hpp
src/: CMakeLists.txt  block.cpp  fasta.cpp  read.cpp  write.cpp
src/utilities/: trim.cpp  trim.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  test_block.cpp
